# world-model-rl

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
src/: conftest.py
src/reflect/: utils.py
src/reflect/components/: actor.py  base.py  base_state.py
src/reflect/components/flow_world_model/: cross_attention.py  dynamic_model.py  world_model.py  world_model_actor.py
src/reflect/components/latent_world_model/: discrete_world_model.py  fsq.py  world_model.py
src/reflect/components/models/: __init__.py  actor.py  decoder.py
src/reflect/components/observation_model/: __init__.py  decoder.py  encoder.py  latent_spaces.py  observation_model.py
src/reflect/components/recon_world_model/: world_model.py
src/reflect/components/rssm_world_model/: memory_actor.py  models.py  rssm.py  world_model.py
src/reflect/components/tests/: test_actor.py
src/reflect/components/trainers/: conftest.py
src/reflect/components/transformer_world_model/: __init__.py  distribution.py  embedder.py  environment.py  head.py  memory_actor.py  state.py  steered_transformer.py  steered_world_model.py  transformer.py  world_model.py  world_model_actor.py
src/reflect/data/: basic_loader.py  loader.py  noise.py  priority_tracker.py  processing.py  saver.py  simple_env.py  simple_rl_env.py  steered_loader.py
src/reflect/data/tests/: conftest.py  (+5 more)
src/reflect/examples/: README.md  differentiable_pendulum.py  nes.py  ppo.ipynb  td3.py  test_env.py  wm.py  wm_td3.py
src/reflect/tests/: test_update_independence.py  test_utils.py
src/reflect/training/: dreaming.py
(+168 files in other folders)
